--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install Korean fonts
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-nanum fonts-noto-cjk
+          fc-cache -fv
+
       # 3️⃣ 의존성 설치
       - name: Install dependencies
         run: |
