--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,13 @@ beautifulsoup4>=4.12.0
 requests>=2.31.0
 urllib3>=2.0.0
 lxml>=4.9.0
+lxml_html_clean
 
 # Data Analysis / Visualization
 scikit-learn>=1.4.0
 matplotlib>=3.9.0
 wordcloud
 
-# AI & Content Extraction (New)
+# AI & Content Extraction
 newspaper3k
 google-generativeai
