--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -13,32 +13,45 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 1) 저장소 코드 내려받기
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2) 파이썬 3.11 설치
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
+      # 3) 라이브러리 설치
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4) 뉴스 수집 실행
       - name: Run news crawler
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
+          NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
         run: python web_news.py
 
+      # 5) 결과물 커밋/푸시 (파일이 없으면 에러 내지 않고 건너뜀)
       - name: Commit and push updates
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/*.csv
-          git commit -m "auto: daily news update $(date -u +'%Y-%m-%dT%H:%MZ')" || echo "No changes"
-          git push
+          
+          # CSV 파일이 실제로 존재하는지 확인 후 add 실행
+          if [ -n "$(find data -name '*.csv' 2>/dev/null)" ]; then
+            git add data/*.csv
+            git commit -m "auto: daily news update $(date -u +'%Y-%m-%dT%H:%MZ')" || echo "No changes to commit"
+            git push
+          else
+            echo "⚠️ 저장할 데이터 파일이 없습니다. (크롤링 결과 없음)"
+          fi
