--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-# Core
-pandas>=2.0.0
-numpy>=1.25.0
-python-dateutil>=2.9.0
-
-# Web Crawling
-beautifulsoup4>=4.12.0
-requests>=2.31.0
-urllib3>=2.0.0
-lxml>=4.9.0
+requests
+pandas
+beautifulsoup4
+lxml
 lxml_html_clean
-
-# Data Analysis / Visualization
-scikit-learn>=1.4.0
-matplotlib>=3.9.0
-wordcloud
-
-# AI & Content Extraction
-newspaper3k
 google-generativeai
+newspaper3k
+trafilatura
